--- a/configfile/UserProviderFirst-pro.yml
+++ b/configfile/UserProviderFirst-pro.yml
@@ -18,3 +18,4 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
+version: UserProviderFirst
