--- a/configfile/UserProviderFirst-dev.yml
+++ b/configfile/UserProviderFirst-dev.yml
@@ -18,5 +18,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
-version: UserProviderFirst
+version: UserProviderFirst-update
   
