--- a/configfile/UserProviderFirst-dev.yml
+++ b/configfile/UserProviderFirst-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8008
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/springcloud?serverTimezone=UTC
+    url: jdbc:mysql://db1:3306/springcloud?serverTimezone=UTC
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
