--- a/configfile/UserProviderSecond-dev.yml
+++ b/configfile/UserProviderSecond-dev.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8008
+  port: 8003
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/springcloud?serverTimezone=UTC
+    url: jdbc:mysql://db1:3306/springcloud?serverTimezone=UTC
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
