--- a/configfile/UserProviderSecond-test.yml
+++ b/configfile/UserProviderSecond-test.yml
@@ -2,7 +2,7 @@ server:
   port: 8002
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/springcloud?serverTimezone=UTC
+    url: jdbc:mysql://db1:3306/springcloud?serverTimezone=UTC
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
@@ -14,8 +14,5 @@ spring:
     show-sql: true
   application:
     name: UserProvider
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
-version: UserProviderFirst
+
+version: UserProviderSecond-update
